[package]
    name = "batteryinfo2"
    version = "0.1.3"
    # version = "0.1.2" # clean up code 
    # version = "0.1.1" # Adding music 
    # version = "0.1.2" # adding threaded timer
    
    authors = ["Luis <mrluiscortes@gmail.com>"]


# ---------------------------------------------------------
# For Music 
# ---------------------------------------------------------
[dependencies]
    piston_window = "0.80.0"
    pistoncore-sdl2_window = "0.50.0"
    piston-music = "0.24.0"

[dependencies.sdl2]
    version = "0.31.0"
    default-features = false
    features = [ "mixer"]
# ---------------------------------------------------------

