# cargo +beta run

[package]
    name = "batteryinfo2"
    version = "0.1.4" # Upgraded Rust to 2018
    # version = "0.1.3" # code uploaded github 
    # version = "0.1.2" # clean up code 
    # version = "0.1.1" # Adding music 
    # version = "0.1.2" # adding threaded timer
    
    authors = ["Luis <mrluiscortes@gmail.com>"]
    edition = "2018"

[dependencies]
    piston_window = "0.85.0"
    pistoncore-sdl2_window = "0.52.0"
    piston-music = "0.24.0"
    serde = "1.0.82"
    serde_derive = "1.0.82"
    serde_yaml = "0.8.8"

[dependencies.sdl2]
    version = "0.31.0"
    default-features = false
    features = [ "mixer"]

